OWS-638: update allowed jvm args